add contact section

--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-need a server to see full site, because d3 need to load some data from local
-and chrome forbid loading local files
-
-./node_modules/http-server/bin/http-server ./www.d2discovery.com/
+sv english writing
